# relative-rotation-graph

./: .gitignore  CLAUDE.md  README.md
.github/workflows/: pages.yml
backend/: pyproject.toml
backend/app/: main.py
backend/app/config/: sectors.json
backend/app/routes/: history.py  rrg.py  sectors.py  watchlist.py
backend/app/services/: cache.py  data.py  fundamentals.py  rrg_engine.py  tv_watchlist.py  volume.py
backend/scripts/: snapshot.py  warmup.py
backend/tests/: test_rrg_engine.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/session/: page.tsx
frontend/components/: DateSlider.tsx  RRGChart.tsx  SessionTabs.tsx  TailControls.tsx  WatchlistUploader.tsx
frontend/lib/: api.ts  sessionStore.ts  types.ts
