[project]
name = "rrg-backend"
version = "0.1.0"
description = "Relative Rotation Graph backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pandas>=2.2",
    "numpy>=1.26",
    "yfinance>=0.2.50",
    "python-multipart>=0.0.9",
    "pydantic>=2.8",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
